--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,14 @@ ext {
 	set('springCloudVersion', "2021.0.1")
 }
 
+jar {
+	manifest {
+		attributes(
+				'Main-Class': 'com.ead.serviceregistry.ServiceRegistryApplication'
+		)
+	}
+}
+
 repositories {
 	mavenCentral()
 }
